--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "post-npm-install",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "npm install when package.json dependencies have changed post-merge",
   "author": "Jonathan Neal <jonathantneal@hotmail.com>",
   "license": "CC0-1.0",
@@ -22,26 +22,27 @@
     "build:bin": "cross-env NODE_ENV=bin rollup -c --silent",
     "build:node": "rollup -c --silent",
     "prepublishOnly": "npm test",
-    "pretest:tape": "npm run build && npm link",
     "test": "npm run test:js && npm run test:tape",
     "test:js": "eslint *.js --cache --ignore-path .gitignore --quiet",
-    "test:tape": "post-npm-install"
+    "pretest:tape": "npm run build && npm link",
+    "test:tape": "post-npm-install",
+    "posttest:tape": "npm unlink"
   },
   "engines": {
     "node": ">=6.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.2.2",
-    "@babel/preset-env": "^7.3.1",
-    "babel-eslint": "^10.0.1",
+    "@babel/core": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
+    "babel-eslint": "^10.0.2",
     "cross-env": "^5.2.0",
-    "eslint": "^5.12.1",
+    "eslint": "^5.16.0",
     "eslint-config-dev": "^2.0.0",
-    "husky": "^1.3.1",
+    "husky": "^3.0.2",
     "pre-commit": "^1.2.2",
-    "rollup": "^1.1.2",
-    "rollup-plugin-babel": "^4.3.2",
-    "rollup-plugin-terser": "^4.0.3"
+    "rollup": "^1.19.4",
+    "rollup-plugin-babel": "^4.3.3",
+    "rollup-plugin-terser": "^5.1.1"
   },
   "eslintConfig": {
     "extends": "dev",
