--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
     "cross-env": "^5.2.0",
     "eslint": "^5.12.1",
     "eslint-config-dev": "^2.0.0",
+    "find-package-json": "^1.2.0",
     "husky": "^1.3.1",
+    "path": "^0.12.7",
     "pre-commit": "^1.2.2",
     "rollup": "^1.1.2",
     "rollup-plugin-babel": "^4.3.2",
@@ -65,5 +67,8 @@
     "merge",
     "install",
     "husky"
-  ]
+  ],
+  "dependencies": {
+    "find-package-json": "^1.2.0"
+  }
 }
